fix: changed h2 (large-heading) and few styles on tablet and mobile devices

--- a/assets/styles/common/_elementor.scss
+++ b/assets/styles/common/_elementor.scss
@@ -68,8 +68,11 @@
 	&.large-heading {
 
 		h2 {
-			font-size: $font-size-h2-xxl !important;
-			line-height: $line-height-h2-xxl !important;
+
+			@media (min-width: ($breakpoint-desktop)) {
+				font-size: $font-size-h2-xxl !important;
+				line-height: $line-height-h2-xxl !important;
+			}
 		}
 	}
 
