--- a/assets/styles/components/_HorizontalTabs.scss
+++ b/assets/styles/components/_HorizontalTabs.scss
@@ -105,8 +105,11 @@
 		&.large-heading {
 
 			h2 {
-				font-size: $font-size-h2-xxl;
-				line-height: $line-height-h2-xxl !important;
+
+				@media (min-width: ($breakpoint-desktop)) {
+					font-size: $font-size-h2-xxl;
+					line-height: $line-height-h2-xxl !important;
+				}
 			}
 		}
 
